syntax="proto3";
package grpcs;

option go_package = "./grpc-protos";

// Request messages
message GetStoreByIDRequest {
  string id = 1;
}

message CreateStoreRequest {
  string name = 1;
  string description = 2;
  string type = 3;  // retail or grosir
}

message UpdateStoreRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string type = 4;  // retail or grosir
}

message DeleteStoreRequest {
  string id = 1;
}

message ListStoresRequest {
  int32 page = 1;
  int32 limit = 2;
}

// Response messages
message StoreResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string type = 4;  // retail or grosir
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}

message StoreErrorResponse {
  string message = 1;
  int32 status_code = 2;
}

message GetStoreResponse {
  int32 status_code = 1;
  StoreResponse data = 2;
  StoreErrorResponse error = 3;
}

message ListStoresResponse {
  int32 status_code = 1;
  repeated StoreResponse data = 2;
  int32 total = 3;
  StoreErrorResponse error = 4;
}

message CreateStoreResponse {
  int32 status_code = 1;
  StoreResponse data = 2;
  StoreErrorResponse error = 3;
}

message UpdateStoreResponse {
  int32 status_code = 1;
  StoreResponse data = 2;
  StoreErrorResponse error = 3;
}

message DeleteStoreResponse {
  int32 status_code = 1;
  StoreErrorResponse error = 2;
}

// Service definition
service StoreService {
  rpc GetStore(GetStoreByIDRequest) returns (GetStoreResponse) {}
  rpc ListStores(ListStoresRequest) returns (ListStoresResponse) {}
  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse) {}
  rpc UpdateStore(UpdateStoreRequest) returns (UpdateStoreResponse) {}
  rpc DeleteStore(DeleteStoreRequest) returns (DeleteStoreResponse) {}
}